--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,3 @@
-{{#test-harness}}
-  {{long-list}}
+{{#test-harness as |secondRender|}}
+  {{long-list secondRender=secondRender}}
 {{/test-harness}}
